# ai-invention-b2d5b0-predictive-residual-message-passing-filt

./: README.md
dataset_iter1_download_and_pr/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_download_and_pr/src/: data.py  download_relstack.py  preview_data_out.json  pyproject.toml
dataset_iter1_relbench_rel_am/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_relbench_rel_am/src/: data.py  mini_data_out.json  preview_data_out.json  pyproject.toml
dataset_iter1_relbench_rel_hm/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_relbench_rel_hm/src/: data.py  full_data_out.json  preview_data_out.json  pyproject.toml  supplementary_article_transaction_aligned_features.parquet  supplementary_customer_transaction_aligned_features.parquet
dataset_iter2_relbench_rel_f1/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter2_relbench_rel_f1/src/: data.py  full_data_out.json  mini_data_out.json  preview_data_out.json  pyproject.toml
dataset_iter2_relbench_rel_f1/src/parquet_features/: constructor_results__constructors__constructorId_features.parquet  constructor_results__races__raceId_features.parquet  constructor_standings__constructors__constructorId_features.parquet  constructor_standings__races__raceId_features.parquet  driver_standings__drivers__driverId_features.parquet  driver_standings__races__raceId_features.parquet  lap_times__drivers__driverId_features.parquet  lap_times__races__raceId_features.parquet  pit_stops__drivers__driverId_features.parquet  qualifying__constructors__constructorId_features.parquet  qualifying__drivers__driverId_features.parquet  qualifying__races__raceId_features.parquet  races__circuits__circuitId_features.parquet  results__constructors__constructorId_features.parquet  results__drivers__driverId_features.parquet  results__races__raceId_features.parquet  results__status__statusId_features.parquet  sprint_results__constructors__constructorId_features.parquet  sprint_results__drivers__driverId_features.parquet  sprint_results__status__statusId_features.parquet
dataset_iter4_relbench_rel_av/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter4_relbench_rel_av/src/: data.py  mini_data_out.json  preview_data_out.json  process_relbench.py  pyproject.toml
evaluation_iter3_corrected_regim/demo/: demo_result.json  eval_code_demo.ipynb
evaluation_iter3_corrected_regim/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter4_cross_experimen/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter4_cross_experimen/src/: eval.py  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter5_mechanistic_syn/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter5_mechanistic_syn/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_definitive_cros/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_definitive_cros/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter7_claims_to_evide/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter7_claims_to_evide/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter7_definitive_prmp/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter7_definitive_prmp/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
experiment_iter2_2d_diagnostic_c/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_2d_diagnostic_c/src/: full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_prmp_benchmark/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_prmp_benchmark/src/: method.py  method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_prmp_vs_standar/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_prmp_vs_standar/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter3_instrumented_pr/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter3_instrumented_pr/src/: full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter3_prmp_benchmark/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter3_prmp_vs_sagecon/src/: method.py  method_out.json  preview_method_out.json  pyproject.toml
experiment_iter4_embedding_space/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter4_prmp_task_type/src/: full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter5_embedding_space/src/: full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter6_loss_function_s/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  test_imports.py
experiment_iter6_prmp_vs_standar/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter6_unified_prmp_be/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter7_full_scale_amaz/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter7_prmp_on_rel_hm/src/: method.py  method_out.json  preview_method_out.json  pyproject.toml
experiment_iter7_prmp_on_rel_hm/src/cache_hm/: articles.parquet  customers.parquet  transactions.parquet
paper_latex/: paper.tex
(+77 files in other folders)
