[project]
name = "rel-stack-dataset"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "relbench==2.1.1",
    "torch==2.10.0",
    "pandas==3.0.1",
    "numpy==2.4.3",
    "loguru==0.7.3",
    "psutil==7.2.2",
    "scikit-learn==1.6.1",
    "scipy==1.17.1",
    "datasets==4.7.0",
    "pooch==1.9.0",
]
