[project]
name = "prmp-data-prep"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pandas==3.0.1",
    "numpy==2.4.3",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "loguru==0.7.3",
    "psutil==7.2.2",
    "joblib==1.5.3",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
]
