[project]
name = "data-collector"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "loguru==0.7.3",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pyarrow==23.0.1",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "joblib==1.5.3",
    "threadpoolctl==3.6.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "tzdata==2025.3",
    "six==1.17.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"
