[project]
name = "rel-f1-dataset"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
description = "RelBench rel-f1 (Formula 1) Dataset: Tables, FK Links, Cardinality Stats & Parent-Child Feature Pairs"
dependencies = [
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "idna==3.11",
    "joblib==1.5.3",
    "loguru==0.7.3",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "pyarrow==23.0.1",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.5",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
]
