[project]
name = "prmp-meta-evaluation"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy==2.4.3",
    "scipy==1.17.1",
    "matplotlib==3.10.8",
    "loguru==0.7.3",
    "psutil==7.2.2",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.62.0",
    "kiwisolver==1.5.0",
    "packaging==26.0",
    "pillow==12.1.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
]
