[project]
name = "prmp-meta-analysis-eval"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.62.0",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "loguru==0.7.3",
    "matplotlib==3.10.8",
    "numpy==2.4.3",
    "packaging==26.0",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
]
