[project]
name = "prmp-vs-sageconv-relbench"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
description = "PRMP vs SAGEConv Benchmark on RelBench rel-hm Tasks"
dependencies = [
    "absl-py==2.4.0",
    "accelerate==1.13.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "anyio==4.12.1",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "click==8.3.1",
    "datasets==4.7.0",
    "diffusers==0.37.0",
    "dill==0.4.0",
    "duckdb==1.5.0",
    "exceptiongroup==1.3.1",
    "filelock==3.20.0",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "grpcio==1.78.0",
    "h11==0.16.0",
    "hf-xet==1.3.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface_hub==1.6.0",
    "idna==3.11",
    "importlib_metadata==8.7.1",
    "Jinja2==3.1.6",
    "joblib==1.5.3",
    "loguru==0.7.3",
    "Markdown==3.10.2",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.18",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-nccl-cu12==2.20.5",
    "nvidia-nvjitlink-cu12==12.9.86",
    "nvidia-nvtx-cu12==12.1.105",
    "opencv-python-headless==4.13.0.92",
    "packaging==26.0",
    "pandas==2.3.3",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "pooch==1.9.0",
    "propcache==0.4.1",
    "protobuf==7.34.0",
    "psutil==7.2.2",
    "pyarrow==23.0.1",
    "pyg-lib==0.4.0+pt24cu121",
    "Pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytorch-frame==0.3.0",
    "pytz==2026.1.post1",
    "PyYAML==6.0.3",
    "regex==2026.2.28",
    "relbench==2.1.1",
    "requests==2.32.5",
    "rich==14.3.3",
    "safetensors==0.7.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sympy==1.14.0",
    "tabulate==0.10.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "termcolor==3.3.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.4.0+cu121",
    "torch-geometric==2.7.0",
    "torch_cluster==1.6.3+pt24cu121",
    "torch_scatter==2.1.2+pt24cu121",
    "torch_sparse==0.6.18+pt24cu121",
    "torchvision==0.19.0+cu121",
    "tqdm==4.67.3",
    "transformers==5.3.0",
    "triton==3.0.0",
    "typer==0.24.1",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "Werkzeug==3.1.6",
    "xxhash==3.6.0",
    "yarl==1.23.0",
    "zipp==3.23.0",
]

[project.urls]
Homepage = "https://github.com/ai-inventor-outputs/ai-inventor"

[tool.uv]
extra-index-url = [
    "https://download.pytorch.org/whl/cu121",
    "https://data.pyg.org/whl/torch-2.4.0+cu121.html",
]
