[project]
name = "prmp-loss-swap-experiment"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
description = "Loss Function Swap Experiment: Isolating Task-Type Effect on PRMP via rel-f1 Controlled Comparison"
dependencies = [
    "loguru==0.7.3",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "pyarrow==23.0.1",
    "requests==2.32.5",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "torch==2.6.0",
    "torch-geometric==2.6.1",
    "torch-scatter==2.1.2+pt26cu124",
    "torch-sparse==0.6.18+pt26cu124",
    "psutil==7.0.0",
]

[tool.uv.sources]
torch-scatter = { url = "https://data.pyg.org/whl/torch-2.6.0%2Bcu124/torch_scatter-2.1.2%2Bpt26cu124-cp311-cp311-linux_x86_64.whl" }
torch-sparse = { url = "https://data.pyg.org/whl/torch-2.6.0%2Bcu124/torch_sparse-0.6.18%2Bpt26cu124-cp311-cp311-linux_x86_64.whl" }
