[project]
name = "prmp-experiment"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch==2.5.1+cu124",
    "torch-scatter==2.1.2+pt25cu124",
    "torch-sparse==0.6.18+pt25cu124",
    "numpy==1.26.4",
    "pandas==2.3.3",
    "scipy==1.15.3",
    "scikit-learn==1.7.2",
    "loguru==0.7.3",
    "tqdm==4.67.3",
    "pyarrow==23.0.1",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu124",
    "https://data.pyg.org/whl/torch-2.5.1+cu124.html",
]
